# Language-api-translator

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_setup_dependencies.sh
api/v1/: translate.py
core/: config.py
schemas/: translate.py
