[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Per Badasu <peter.badasu10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
torch = "^1.12.1"
happytransformer = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
